# KV_

./: .gitignore  CMakeLists.txt  README.md  common.h  main.c
client/: kvclient.c  kvclient.h
commands/: command_.c  command_.h
core/: k_v.c  k_v.h
performancetest/: kv_test.py
protocol/: buffers_.c  buffers_.h  constant_.c  constant_.h  slenprotocol.c  slenprotocol.h
reply/: reply_.c  reply_.h
server/: server_.c  server_.h
test/: client_test.c  command_test.c  k_v_test.c  protocol_test.c  protocol_test_2.c  protocol_test_3.c  server_test.c  zero_cpy_test.c
